<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layoutDirection="rtl">
   <androidx.core.widget.NestedScrollView
       android:layout_width="match_parent"
       android:layout_height="match_parent">
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical">
           <ImageView
               android:layout_width="wrap_content"
               android:layout_height="56dp"
               android:layout_gravity="center_horizontal"
               android:src="@drawable/ic_nike_logo"/>
           <EditText
               android:id="@+id/searchView"
               android:layout_width="match_parent"
               android:layout_height="46dp"
               android:layout_marginEnd="16dp"
               android:layout_marginStart="16dp"
               android:paddingEnd="16dp"
               android:paddingStart="42dp"
               android:maxLines="1"
               android:hint="جستجو"
               android:textSize="15sp"
               android:textColor="?colorOnSurface"
               android:textColorHint="?android:textColorSecondary"
               android:background="@drawable/background_et_search"
               android:drawableStart="@drawable/ic_search"
               />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
               <androidx.viewpager2.widget.ViewPager2
                   android:id="@+id/bannerSliderViewPager"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_marginTop="16dp"
                  />

               <com.tbuonomo.viewpagerdotsindicator.DotsIndicator
                   android:id="@+id/sliderIndicator"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_gravity="bottom|center_horizontal"
                   android:layout_marginBottom="12dp"
                   app:dotsColor="#E0DCDC"
                   app:dotsCornerRadius="8dp"
                   app:dotsSize="5dp"
                   app:dotsSpacing="3dp"
                   app:dotsWidthFactor="4"
                   app:progressMode="false"
                   app:selectedDotColor="@color/black" />
            </FrameLayout>
           <FrameLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:paddingEnd="16dp"
               android:paddingStart="16dp">
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/latest"
                   android:textAppearance="?textAppearanceHeadline6"
                   android:textColor="?android:textColorSecondary"
                   android:layout_gravity="start|center_vertical"/>
               <com.google.android.material.button.MaterialButton
                   android:id="@+id/viewLatestProductsBtn"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_gravity="end|center_vertical"
                   android:text="@string/viewAll"
                   style="@style/Widget.MaterialComponents.Button.TextButton"/>
           </FrameLayout>
           <androidx.recyclerview.widget.RecyclerView
               android:id="@+id/latestProductRv"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:clipToPadding="false"
               android:paddingStart="12dp"
               android:paddingEnd="12dp"/>
           <FrameLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:paddingEnd="16dp"
               android:paddingStart="16dp">
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/popular"
                   android:textAppearance="?textAppearanceHeadline6"
                   android:textColor="?android:textColorSecondary"
                   android:layout_gravity="start|center_vertical"/>
               <com.google.android.material.button.MaterialButton
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_gravity="end|center_vertical"
                   android:text="@string/viewAll"
                   style="@style/Widget.MaterialComponents.Button.TextButton"/>
           </FrameLayout>
           <androidx.recyclerview.widget.RecyclerView
               android:id="@+id/popularProductRv"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:clipToPadding="false"
               android:paddingStart="12dp"
               android:paddingEnd="12dp"/>
           
       </LinearLayout>
   </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>