<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feature.main.product.ProductDetailActivity">

    <com.example.nikestore.view.scroll.ObservableScrollView
        android:id="@+id/observableScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:paddingBottom="100dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.example.nikestore.view.NikeImageView
                    android:id="@+id/productIv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:viewAspectRatio="1.3" />
            </FrameLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/titleTv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:textAppearance="@style/TextAppearance.MyTheme.Headline6"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/previousPriceTv"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="نام محصول" />

                <TextView
                    android:id="@+id/previousPriceTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:textAppearance="?textAppearanceBody2"
                    android:textColor="?android:textColorSecondary"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="120000 تومان" />

                <TextView
                    android:id="@+id/currentPriceTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    app:layout_constraintStart_toStartOf="@+id/previousPriceTv"
                    app:layout_constraintTop_toBottomOf="@+id/previousPriceTv"
                    tools:text="110000 تومان" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="این کتونی شدیدا برای دویدن و پیاده رویی مناسب هست و تقریبا هیچ فشار مخربی نمی گذارد به پا و زانوی شما."
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingTop="16dp"
                android:paddingEnd="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|end"
                    android:text="@string/comments"
                    android:textAppearance="?textAppearanceHeadline6"
                    android:textColor="?android:textColorSecondary" />

                <com.google.android.material.button.MaterialButton
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|start"
                    android:text="@string/insertComment" />

            </FrameLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/commentRv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/background_comment"
                android:clipToPadding="false" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/viewAllCommentsBtn"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="32dp"
                android:text="@string/viewAllComments"
                android:visibility="gone" />
        </LinearLayout>
    </com.example.nikestore.view.scroll.ObservableScrollView>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:layoutDirection="rtl"
        android:translationZ="5dp">

        <ImageView
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|start"
            android:layout_marginStart="16dp"
            android:src="@drawable/ic_back" />

        <ImageView
            android:id="@+id/favoriteBtn"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center_vertical|end"
            android:layout_marginEnd="16dp"
            android:src="@drawable/ic_baseline_favorite_border_24" />
    </FrameLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/toolbarView"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:alpha="0"
        android:layoutDirection="rtl"
        app:cardCornerRadius="0dp"
        app:cardElevation="4dp">

        <TextView
            android:id="@+id/toolbarTitleTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|start"
            android:layout_marginStart="48dp"
            android:textAppearance="@style/TextAppearance.MyTheme.Headline6"
            tools:text="نام محصول" />
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/addToCartBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/addToCart" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>